<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010619"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubogiytext"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/yellow"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:text="1"
            android:textColor="@color/yellow"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/gadost"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:background="@drawable/soyuz_krasniy"

                android:text="@string/dislike"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/mizinec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:background="@drawable/soyuz_nerushimiy"
                android:text="@string/mizinec"
                android:textSize="20dp" />

            <Button
                android:id="@+id/negadost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:background="@drawable/soyuz_nerushimiy"
                android:text="@string/like"
                android:textSize="20dp" />

            <Button
                android:id="@+id/endpohod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:background="@drawable/soyuz_nerushimiy"
                android:text="@string/end"
                android:textSize="20dp" />
            <Button
                android:id="@+id/tomain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/soyuz_nerushimiy"
                android:text="@string/nazad"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>