<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444441"
    tools:context="com.deepth.pdkkld.MainActivity"
    >


    <Button
        android:id="@+id/buttonmyach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/soyuz_nerushimiy"
        android:text="@string/myach"
        android:textColorLink="#FFFFFF" />


    <Button
        android:id="@+id/offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="150dp"
        android:layout_weight="1"
        android:background="@drawable/soyuz_nerushimiy"
        android:text="@string/offline"
        android:textColorLink="#FFFFFF" />


    <Button
        android:id="@+id/buttonhost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:background="@drawable/soyuz_nerushimiy"
        android:text="@string/host"
        android:textColorLink="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8000000"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0E0C0C"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/menyu" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>