<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/gadost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/soyuz_krasniy"
                android:text="@string/dislike"
                android:textSize="20dp" />
            <Button
                android:id="@+id/negadost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/soyuz_nerushimiy"
                android:text="@string/like"
                android:textSize="20dp" />

            <Button
                android:id="@+id/endpohod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@drawable/soyuz_nerushimiy"
                android:text="@string/end"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>