<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010619"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/tomain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/soyuz_nerushimiy"
            android:text="@string/nazad"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>

            <LinearLayout
                android:id="@+id/c4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chose"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25dp"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:background="@drawable/soyuz_nerushimiy"/>

        <LinearLayout
            android:id="@+id/g2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/g3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/gonext"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/soyuz_nerushimiy"
            android:text="@string/nextasho"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="45dp"
                android:text="@string/pidorstr"
                android:textColor="@color/yellow"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lohstr"
                android:textColor="@color/yellow"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/schetpidorov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="96dp"

                android:textColor="@color/yellow"
                android:textSize="80sp"
                android:text="0" />

            <TextView
                android:id="@+id/schetlohov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="45dp"
                android:textColor="@color/yellow"
                android:textSize="80sp"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>